# y2k_board

./: .gitignore  Cargo.toml  DESIGN_DOC.md  DESIGN_TEXT_CACHE.md  PRIVATE_NOTE.md  README.md  build.rs  diff.txt  fix.js  fix_text.js  fontkit.js  gl.js  index.html  mouse_diff.txt  mouse_patch.txt  out.txt  patch.js  test_mq.rs  test_norm.rs  test_vf.rs  update.js
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
ref/: image_cache.cpp
src/: app.rs  board.rs  camera.rs  clipboard.rs  debug.rs  images.rs  input.rs  main.rs  palette.rs  renderer.rs  snapshot.rs  spatial.rs  stats.rs  text.rs  tool.rs  toolbar.rs
src/app/: content.rs  keyboard.rs  rendering.rs  snapshot.rs  style.rs  text_editing.rs
src/board/: element.rs  geometry.rs  operation.rs  temp_test.rs  tests.rs
src/input/: handles.rs  mod.rs  preview.rs  state.rs
src/input/handlers/: keyboard.rs  mod.rs  mouse.rs  zoom.rs
src/input/handlers/mouse/: connection.rs  mod.rs  pan.rs  selection.rs  tools.rs  transform.rs
src/platform/: browser_io.rs  cursor.rs  image_streaming.rs  ime.rs  mod.rs  snapshot.rs
src/renderer/: construct.rs  shaders.rs  types.rs
src/rendering/: bitmap_text.rs  cache.rs  mod.rs  transform.rs
src/rendering/renderer/: construct.rs  draw.rs  mod.rs  shaders.rs  types.rs  uniforms.rs
src/services/: collaboration.rs  mod.rs
src/text/: atlas.rs  edit.rs  fonts.rs  layout.rs  mod.rs  style.rs
src/ui/: mod.rs  overlay.rs  property_panel.rs  tool.rs  toolbar.rs
web/: check.py  font.js  gl.js  index.html  minigalaktyk.wasm
web_host/: y2kboard.d  y2kboard.wasm
