[package]
name = "quadboard"
version = "0.1.0"
edition = "2021"

[dependencies]
miniquad = "0.4.8"
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
cosmic-text = "0.18.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "imm"] }


[profile.fast]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
strip = false


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false


