[package]
name = "quadboard"
version = "0.1.0"
edition = "2021"

[dependencies]
miniquad = "0.4.8"
glam = { version = "0.29", default-features = false, features = ["std", "serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
bincode = "1"
cosmic-text = { version = "0.18.2", default-features = false, features = ["std", "swash"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "imm"] }


[profile.fast]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
strip = false


[profile.release]
opt-level = 3          # Max speed optimizations
lto = "fat"            # Full LTO (slower compile, faster runtime)
codegen-units = 1      # Better whole-program optimization
panic = "abort"        # Skip unwinding overhead
strip = true          # Keep symbols (optional, won't affect runtime speed)
debug = false
incremental = false