[package]
name = "quadboard"
version = "0.1.0"
edition = "2021"

[dependencies]
miniquad = "0.4.8"
glam = { version = "0.29", default-features = false, features = ["std", "serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
bincode = "1"
cosmic-text = { version = "0.18.2", default-features = false, features = ["std", "swash"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
webp = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "imm"] }
arboard = "3.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"


[profile.fast]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
strip = false


[profile.release]
opt-level = 3          # Max speed optimizations
lto = "fat"            # Full LTO (slower compile, faster runtime)
codegen-units = 1      # Better whole-program optimization
panic = "abort"        # Skip unwinding overhead
strip = true          # Keep symbols (optional, won't affect runtime speed)
debug = false
incremental = false